--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@
                     <div class="image">
                         <img src="static/images/img_5.jpg" alt="News">
                     </div>
-                    <h3>Temilade Dauda holds an HND in Computer Science and currently in the ninth month of the twelve month Software Engineering program at ALX.<br><br>Alongside my academic pursuits, I am a proficient minstrel and hold a deep devotion to spiritual matters, serving as a seasoned teacher of the word.<br><br>In my professional capacity, I am engaged as a freelance Administrative Assistant, leveraging my organizational skills to support various projects.<br><br>Additionally, I dedicate my time as a volunteer contributor to the annual devotional book "Food for the Journey," where I actively participate in its creation and dissemination.<br><br>Connect via these handles:</h3>
+                    <h3>Temilade Dauda holds an HND in Computer Science and currently in the ninth month of the twelve month Software Engineering program at ALX.<br><br>Alongside the academic pursuits, He is a proficient minstrel and hold a deep devotion to spiritual matters, serving as a seasoned teacher of the word.<br><br>In his professional capacity, He is engaged as a freelance Administrative Assistant, leveraging his organizational skills to support various projects.<br><br>Additionally, He dedicate his time as a volunteer contributor to the annual devotional book "Food for the Journey," where He actively participate in its creation and dissemination.<br><br>Connect via these handles:</h3>
                     <!-- Social media handles of the author -->
                     <div class="handle">
                         <a href="https://wa.me/message/BUPMLODTS3ZXM1" target="_blank" rel="noopener noreferrer">
