--- a/templates/register.html
+++ b/templates/register.html
@@ -38,7 +38,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Create an account to enjoy our services.</h1>
-            <p>Please provide a valid email address!</p>
+            <p>Please provide a valid email address and ensure the telephone format as (+234-8099999999)!</p>
         </div>
     </section>
 
