--- a/templates/home.html
+++ b/templates/home.html
@@ -101,7 +101,7 @@
                     <h2><u>Author</u></h2>
                     <!-- Image and description about the author -->
                     <div class="image">
-                        <img src="static/images/img_5.jpg" alt="News">
+                        <img src="static/images/temi.jpeg" alt="News">
                     </div>
                     <h3>Temilade Dauda holds an HND in Computer Science and currently in the ninth month of the twelve month Software Engineering program at ALX.<br><br>Alongside the academic pursuits, He is a proficient minstrel and hold a deep devotion to spiritual matters, serving as a seasoned teacher of the word.<br><br>In his professional capacity, He is engaged as a freelance Administrative Assistant, leveraging his organizational skills to support various projects.<br><br>Additionally, He dedicate his time as a volunteer contributor to the annual devotional book "Food for the Journey," where He actively participate in its creation and dissemination.<br><br>Connect via these handles:</h3>
                     <!-- Social media handles of the author -->
