--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
     <!-- Title of the webpage -->
     <title>NewsHub</title>
     <!-- Link to the external stylesheet -->
+    <link rel="icon" href="static/images/img_0.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
